2001-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about): Put an icon image as about://emacs-w3m.gif.
	(w3m-retrieve): Make an exception of about://emacs-w3m.gif.
	(w3m-attributes): Ditto.
	(w3m-emacs-w3m-icon): New constant for about://emacs-w3m.gif.

2001-05-22  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/shimbun.el (shimbun-retrieve-url): Decode buffer with
	w3m-output-coding-system.
	(shimbun-retrieve-url-buffer): Ditto.

	* w3m.el (w3m-region): Call w3m-render-region for the region
	from `point-min' to `point-max' because buffer is already narrowed.

	* shimbun/sb-fml.el (shimbun-make-contents): Don't make new header
	structure.
	(shimbun-make-contents): Process content as HTML.

2001-05-21  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-w3m-dev.el: New file.

	* shimbun/sb-fml.el (shimbun-make-contents): Use `delete-region'
	instead of `kill-line' not to destroy kill-ring.

2001-05-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-mime-text/html-w3m): Fix condition when
	mew-mime-text/html() call, again. Avoid byte-compile warning when
	compiling.

2001-05-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-make-html-contents): Define it before
	it is used.
	(shimbun-make-html-contents): Ditto.

2001-05-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Add support code of w3mmee.  Reorganaized codes to
	handle content types and coding systems which are specified by user.
	(toplevel): Require 'pccl.
	(w3m-type): New user option.
	(w3m-mnc): Removed user option.
	(w3m-linefeed-type): Removed variable.
	(w3m-dump-head-source-option): Ditto.
	(w3m-decode-all-to-this-charset): Ditto.
	(w3m-halfdump-option): Ditto.
	(w3m-halfdump-expand-options): Ditto.
	(w3m-extended-characters-table): Ditto.
	(w3m-command): Refer `w3m-type' to decide default value.
	(w3m-command-arguments): Ditto.
	(w3m-output-coding-system): Changed default value to `w3m-euc-japan'.