@@ -2110,11 +2110,14 @@ to nil."
 (define-ccl-program w3m-euc-japan-encoder
   `(1 (loop (read r0) (write-repeat r0))))
 
-(make-ccl-coding-system
- 'w3m-euc-japan ?E
- "ISO 2022 based EUC encoding for Japanese with w3m internal characters.
+(unless (w3m-static-if (featurep 'xemacs)
+	    (find-coding-system 'w3m-euc-japan)
+	  (coding-system-p 'w3m-euc-japan))
+  (make-ccl-coding-system
+   'w3m-euc-japan ?E
+   "ISO 2022 based EUC encoding for Japanese with w3m internal characters.
   (generated by `w3m')"
- 'w3m-euc-japan-decoder 'w3m-euc-japan-encoder)
+   'w3m-euc-japan-decoder 'w3m-euc-japan-encoder))
 
 (defun w3m-rendering-region (start end &optional charset)
   "Do rendering of contents in this buffer as HTML and return title."
